chore(api): renamed active hours to business times
